# Prompt-Gen-GUI

./: .gitignore  LICENSE  Prompt Gen GUI 1.3.py  Prompt Gen GUI 2.0.py  README.md  app.py  nai tag词典-服装.doc  nai tag词典-服装.txt  pyproject.toml
.github/workflows/: ci.yml  windows-build-release.yml
archive/: Prompt Gen GUI 1.3.py  R18姿势.txt
legacy/: prompt_gen_gui_v1_9.py  prompt_gen_gui_v2_0.py
notebooks/: Prompt_Gen_GUI.ipynb
py/: csv2jptagjson.py  fetch_danbooru_tags.py  japanese_tags.json  keyword_aliases.json  merge_aliases.py
release_pkg/: PromptGenGUI15_ReleaseNote.txt
src/prompt_gen_gui/: __init__.py  __main__.py  main_1_5.py  tags.json
test_run/: PromptGenGUI14_ReleaseNote.txt
test_run/py/: keyword_aliases.json
tests/: test_import.py
