[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-gen-gui"
version = "1.3"
description = "Interactive Prompt Builder"
readme = "README.md"
authors = [{ name = "iky8039" }]
requires-python = ">=3.8"

[project.scripts]
prompt-gen-gui = "prompt_gen_gui.__main__:main"
